# bk7251_freertos_sdk

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  application.mk  ble.mk  generate_make.bat  ip.mk
beken378/: .gitignore  SConscript  beken.mk
beken378/app/: app.c
beken378/app/config/: param_config.c  sys_version.h
beken378/app/net_work/: app_drone.c
beken378/app/standalone-ap/: sa_ap.c
beken378/app/standalone-station/: sa_station.c
beken378/demo/: ieee802_11_demo.c
beken378/driver/ble/: SConscript
beken378/driver/ble/ble_pub/modules/app/src/: app_ble.c  app_task.c
beken378/driver/common/: dd.c
beken378/driver/gpio/: gpio.c
beken378/driver/i2c/: i2c1.c  i2c1.h
beken378/driver/i2s/: i2s.c
beken378/driver/icu/: icu.c
beken378/driver/include/: gpio_pub.h  spi_pub.h  uart_pub.h  usb_pub.h
beken378/driver/phy/: phy_trident.c
beken378/driver/pwm/: mcu_ps_timer.c  pwm.c
beken378/driver/saradc/: saradc.c
beken378/driver/sdcard/: sdcard.c  sdcard.h  sdio_driver.c
beken378/driver/spi/: spi.c  spi_master.c  spi_slave.c
beken378/driver/sys_ctrl/: sys_ctrl.c
beken378/driver/uart/: uart.c  uart.h
beken378/func/: func.c
beken378/func/airkiss/: airkiss_main.c
beken378/func/bk7011_cal/: bk7221U_cal.c  bk7231U_cal.c  bk7231U_cal.h
beken378/func/camera_intf/: camera_intf.c
beken378/func/easy_flash/: bk_ef.c
beken378/func/hostapd-2.5/bk_patch/: signal.h
beken378/func/hostapd-2.5/hostapd/: main_none.c  main_none.h
beken378/func/hostapd-2.5/src/ap/: ap_config.h  beacon.c  drv_callbacks.c  hostapd.c  hw_features.c  ieee802_11.c  sta_info.c  wpa_auth_glue.c
beken378/func/hostapd-2.5/src/common/: defs.h  ieee802_11_common.c  notifier.c  notifier.h  wpa_ctrl.h
beken378/func/hostapd-2.5/src/crypto/: aes-internal-dec.c  aes-internal-enc.c  aes-internal.c  md5-internal.c  md5.c  sha1-internal.c  sha1.c
beken378/func/hostapd-2.5/src/drivers/: driver.h  driver_beken.c  driver_beken.h
beken378/func/hostapd-2.5/src/rsn_supp/: wpa.c
beken378/func/hostapd-2.5/src/utils/: build_config.h  eloop.c  eloop.h  wpa_debug.h
beken378/func/hostapd-2.5/wpa_supplicant/: bss.h  config.c  config.h  config_none.c  config_ssid.h  ctrl_iface.c  events.c  main_supplicant.c  notify.c  notify.h  wlan.c  wlan_defs.h  wpa_scan.c  wpa_supplicant.c  wpa_supplicant_i.h
beken378/func/hostapd_intf/: hostapd_intf.c
beken378/func/include/: mcu_ps_pub.h  power_save_pub.h  rw_pub.h  wlan_ui_pub.h
beken378/func/joint_up/: role_launch.c  role_launch.h
beken378/func/misc/: fake_clock.c
beken378/func/paho-mqtt/client/src/: MQTTClient.c  MQTTFreeRTOS.c
beken378/func/power_save/: manual_ps.c  mcu_ps.c  power_save.c  power_save.h
beken378/func/rwnx_intf/: rw_msdu.c  rw_msg_rx.c  rw_msg_tx.c
beken378/func/saradc_intf/: saradc_intf.c
beken378/func/temp_detect/: temp_detect.c
beken378/func/uart_debug/: command_line.c
beken378/func/usb_plug/: usb_plug.c
beken378/func/user_driver/: BkDriverFlash.c
beken378/func/wlan_ui/: wlan_cli.c  wlan_ui.c
beken378/ip/: SConscript
beken378/ip/lmac/src/ps/: ps.h
beken378/ip/lmac/src/td/: td.h
beken378/ip/lmac/src/tx/: tx_swdesc.h
beken378/ip/lmac/src/vif/: vif_mgmt.h
beken378/os/FreeRTOSv9.0.0/FreeRTOS/Source/: queue.c
beken378/os/FreeRTOSv9.0.0/FreeRTOS/Source/portable/Keil/ARM968es/: portmacro.h
beken378/os/include/: FreeRTOSConfig.h
beken378/rttos/: os_clock.c
beken378/rttos/source/: rtos_pub.c
config/: sys_config.h
demos/: demos_config.h
